macros/tests/ui/declare/skip_nc_fail.stderr
warning: `self_id` does not be used
 --> tests/ui/declare/skip_nc_fail.rs:6:11
  |
6 |       id: self_id,
  |           ^^^^^^^
  |
help: Remove this line.
 --> tests/ui/declare/skip_nc_fail.rs:6:11
  |
6 |       id: self_id,
  |           ^^^^^^^

warning: Unnecessary attribute, because not depends on any others
 --> tests/ui/declare/skip_nc_fail.rs:7:7
  |
7 |       #[skip_nc]
  |       ^^^^^^^^^^
  |
  = help: Try to remove it.

warning: `self_id` does not be used
  --> tests/ui/declare/skip_nc_fail.rs:14:11
   |
14 |       id: self_id,
   |           ^^^^^^^
   |
help: Remove this line.
  --> tests/ui/declare/skip_nc_fail.rs:14:11
   |
14 |       id: self_id,
   |           ^^^^^^^

warning: Unnecessary attribute, because not depends on any others
  --> tests/ui/declare/skip_nc_fail.rs:16:7
   |
16 |       #[skip_nc]
   |       ^^^^^^^^^^
   |
   = help: Try to remove it.

warning: `self_id` does not be used
  --> tests/ui/declare/skip_nc_fail.rs:23:11
   |
23 |       id: self_id,
   |           ^^^^^^^
   |
help: Remove this line.
  --> tests/ui/declare/skip_nc_fail.rs:23:11
   |
23 |       id: self_id,
   |           ^^^^^^^

warning: Unnecessary attribute, because not depends on any others
  --> tests/ui/declare/skip_nc_fail.rs:25:7
   |
25 |       #[skip_nc]
   |       ^^^^^^^^^^
   |
   = help: Try to remove it.

error: Test for declare syntax warning.
  --> tests/ui/declare/skip_nc_fail.rs:30:3
   |
30 |   compile_error!("Test for declare syntax warning.");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
